Fix flex on Firefox

--- a/static/src/stylesheets/module/facia/_item.scss
+++ b/static/src/stylesheets/module/facia/_item.scss
@@ -77,6 +77,9 @@ $fc-item-gutter: $gs-gutter / 4;
     @include mq(tablet) {
         .has-flex & {
             @include flex(1);
+            // see: http://stackoverflow.com/questions/7813783/firefox-and-flexbox-when-using-white-space-nowrap-on-child-element-the-flexib
+            // width:0 fixes child elements with white-space:nowrap below flex
+            width: 0;
         }
 
         .has-flex-wrap & {
