--- a/static/src/stylesheets/module/facia/item-tones/_tone-live.scss
+++ b/static/src/stylesheets/module/facia/item-tones/_tone-live.scss
@@ -86,7 +86,10 @@
     overflow: hidden;
     margin-left: -5px;
     margin-right: -5px;
-    margin-bottom: -24px;
+
+    .fc-item--has-metadata & {
+        margin-bottom: -24px;
+    }
 
     .fc-item--has-sublinks-1 &,
     .fc-item--has-sublinks-2 &,
